# VSG-Annotator

./: .env.example  .gitignore  README.md  export_annotated.py  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/api/routes/: __init__.py  ai.py  annotations.py  edges.py  export.py  import_routes.py  masks.py  reextract.py  users.py  videos.py
backend/core/: __init__.py  edge_manager.py  predicate_vocab.py  revision_tracker.py  schema_validator.py  vsg_loader.py
backend/models/: __init__.py  database.py  schemas.py
backend/scripts/: cache_frames.py
backend/services/: __init__.py  ai_service.py  annotation_service.py  export_service.py  import_service.py  mask_service.py  reextract_clip.py  reextract_prompts.py  reextract_service.py  video_service.py
bash_scripts/: ensure_servers.sh  reload_videos.sh  stop_servers.sh
docs/: PIPELINE.md
docs/connection/: README.md
docs/datasets_support/kitti_step/: kitti_step.md
docs/datasets_support/motchallenge_step/: motchallenge_step.md
docs/datasets_support/waymo/: waymo_pvps.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAI.ts  useVideo.ts
frontend/src/services/: ai.ts  api.ts  segmentationApi.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: edgeFrame.ts
scripts/: cache_manager.py  convert_frames_to_jpg.py  import_vsg.py  seed_data.py
tests/backend/: test_videos_routes_imports.py  test_vsg_loader.py
(+31 files in other folders)
